{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 329,
  "lineage": "1a29ccda-8d65-d000-fbfa-8d876e14a49e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-086d9218a8a18883c",
            "domain": "vpc",
            "id": "eipalloc-0b0dd707a408bc1c2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00413435f006b49f3",
            "private_dns": "ip-172-16-7-13.ec2.internal",
            "private_ip": "172.16.7.13",
            "public_dns": "ec2-52-5-191-40.compute-1.amazonaws.com",
            "public_ip": "52.5.191.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:internet-gateway/igw-01900fb1fbb0395e9",
            "id": "igw-01900fb1fbb0395e9",
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "vpc-0d6fc87d11afbab5a-IG!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ext-alb/01984d90e39708e2",
            "arn_suffix": "app/ext-alb/01984d90e39708e2",
            "dns_name": "ext-alb-483300051.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ext-alb/01984d90e39708e2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-0ba95f339a6953392"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ecf5e7266e6eef8"
              },
              {
                "subnet_id": "subnet-0685561047ed03a22"
              }
            ],
            "subnets": [
              "subnet-05ecf5e7266e6eef8",
              "subnet-0685561047ed03a22"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ialb/bcea2ec342a97e97",
            "arn_suffix": "app/ialb/bcea2ec342a97e97",
            "dns_name": "internal-ialb-305325070.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ialb/bcea2ec342a97e97",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-05b7811290fc03027"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d13a9949cc7ebb5c"
              },
              {
                "subnet_id": "subnet-0d9505eb2d5942424"
              }
            ],
            "subnets": [
              "subnet-0d13a9949cc7ebb5c",
              "subnet-0d9505eb2d5942424"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ext-alb/01984d90e39708e2/6bc88177f6286428",
            "certificate_arn": "arn:aws:acm:us-east-1:353928175117:certificate/9b7fb693-a5cd-45d9-b0a5-6e90c5e59768",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/nginx-tgt/99618ffd237b220c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ext-alb/01984d90e39708e2/6bc88177f6286428",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ext-alb/01984d90e39708e2",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_acm_certificate.mytoolings",
            "aws_acm_certificate_validation.mytoolings",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.mytoolings",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ialb/bcea2ec342a97e97/d24c9fadcd1a965d",
            "certificate_arn": "arn:aws:acm:us-east-1:353928175117:certificate/9b7fb693-a5cd-45d9-b0a5-6e90c5e59768",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/wordpress-tgt/54c59cae97ea537d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ialb/bcea2ec342a97e97/d24c9fadcd1a965d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ialb/bcea2ec342a97e97",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_acm_certificate.mytoolings",
            "aws_acm_certificate_validation.mytoolings",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.mytoolings",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/tooling-tgt/a22e83305c70bad7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener-rule/app/ialb/bcea2ec342a97e97/d24c9fadcd1a965d/fa8d69dac1021542",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.mytoolings.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener-rule/app/ialb/bcea2ec342a97e97/d24c9fadcd1a965d/fa8d69dac1021542",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ialb/bcea2ec342a97e97/d24c9fadcd1a965d",
            "priority": 99
          },
          "dependencies": [
            "aws_acm_certificate.mytoolings",
            "aws_acm_certificate_validation.mytoolings",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.mytoolings",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/nginx-tgt/99618ffd237b220c",
            "arn_suffix": "targetgroup/nginx-tgt/99618ffd237b220c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/nginx-tgt/99618ffd237b220c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/tooling-tgt/a22e83305c70bad7",
            "arn_suffix": "targetgroup/tooling-tgt/a22e83305c70bad7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/tooling-tgt/a22e83305c70bad7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/wordpress-tgt/54c59cae97ea537d",
            "arn_suffix": "targetgroup/wordpress-tgt/54c59cae97ea537d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/wordpress-tgt/54c59cae97ea537d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0dd707a408bc1c2",
            "id": "nat-083dcebeed5fe8aed",
            "network_interface_id": "eni-00413435f006b49f3",
            "private_ip": "172.16.7.13",
            "public_ip": "52.5.191.40",
            "subnet_id": "subnet-0685561047ed03a22",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01900fb1fbb0395e9",
            "id": "r-rtb-00e702dd703ee74831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e702dd703ee7483",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-0a09d09ce8d2002fb",
            "id": "rtb-0a09d09ce8d2002fb",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-00e702dd703ee7483",
            "id": "rtb-00e702dd703ee7483",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01900fb1fbb0395e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e36a08c140a141e",
            "route_table_id": "rtb-0a09d09ce8d2002fb",
            "subnet_id": "subnet-0d13a9949cc7ebb5c"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017c7941aa745280f",
            "route_table_id": "rtb-0a09d09ce8d2002fb",
            "subnet_id": "subnet-0d9505eb2d5942424"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0653fce5bb6a508bc",
            "route_table_id": "rtb-0a09d09ce8d2002fb",
            "subnet_id": "subnet-0f049dd433dd7bf61"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021666d41f55d105d",
            "route_table_id": "rtb-0a09d09ce8d2002fb",
            "subnet_id": "subnet-0ec0e1575af19c6c5"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0007d20e2463167f0",
            "route_table_id": "rtb-00e702dd703ee7483",
            "subnet_id": "subnet-0685561047ed03a22"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dfdad563d46fb76",
            "route_table_id": "rtb-00e702dd703ee7483",
            "subnet_id": "subnet-05ecf5e7266e6eef8"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0713544927564fdb0",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0713544927564fdb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-Bastion-SG",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0310adbd589b61a20",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0310adbd589b61a20",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0761f2a4444bcc3b7"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0713544927564fdb0",
                  "sg-0761f2a4444bcc3b7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0ba95f339a6953392",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba95f339a6953392",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb-sg",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-05b7811290fc03027",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b7811290fc03027",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1678a57eee04da9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0e1678a57eee04da9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1678a57eee04da9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0713544927564fdb0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba95f339a6953392"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0761f2a4444bcc3b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0761f2a4444bcc3b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0713544927564fdb0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b7811290fc03027"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1242241643",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e1678a57eee04da9",
            "self": false,
            "source_security_group_id": "sg-0713544927564fdb0",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2988087952",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b7811290fc03027",
            "self": false,
            "source_security_group_id": "sg-0e1678a57eee04da9",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3089854503",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0310adbd589b61a20",
            "self": false,
            "source_security_group_id": "sg-0713544927564fdb0",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-241414805",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0310adbd589b61a20",
            "self": false,
            "source_security_group_id": "sg-0761f2a4444bcc3b7",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2644845087",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0310adbd589b61a20",
            "self": false,
            "source_security_group_id": "sg-0761f2a4444bcc3b7",
            "to_port": 2049,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1410155057",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e1678a57eee04da9",
            "self": false,
            "source_security_group_id": "sg-0ba95f339a6953392",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2179988466",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0761f2a4444bcc3b7",
            "self": false,
            "source_security_group_id": "sg-05b7811290fc03027",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2743851716",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0761f2a4444bcc3b7",
            "self": false,
            "source_security_group_id": "sg-0713544927564fdb0",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0d13a9949cc7ebb5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.32.0/20",
            "id": "subnet-0d13a9949cc7ebb5c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0d9505eb2d5942424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.48.0/20",
            "id": "subnet-0d9505eb2d5942424",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0f049dd433dd7bf61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.64.0/20",
            "id": "subnet-0f049dd433dd7bf61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-4!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-4!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0ec0e1575af19c6c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.80.0/20",
            "id": "subnet-0ec0e1575af19c6c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-5!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-5!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0685561047ed03a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/20",
            "id": "subnet-0685561047ed03a22",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-05ecf5e7266e6eef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/20",
            "id": "subnet-05ecf5e7266e6eef8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1!",
              "Owner-Email": "ezekiel.umesi@gmail.com"
            },
            "vpc_id": "vpc-0d6fc87d11afbab5a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:vpc/vpc-0d6fc87d11afbab5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-06fdc0f458e469242",
            "default_route_table_id": "rtb-033df5ca9ba7b0cff",
            "default_security_group_id": "sg-06f9a44057111dc3d",
            "dhcp_options_id": "dopt-0ff179fee1ba4567e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6fc87d11afbab5a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033df5ca9ba7b0cff",
            "owner_id": "353928175117"
          }
        }
      ]
    }
  ]
}